# FermatSketch

./: CMakeLists.txt
include/: local_agent.h  packet_handler.h  params.h  shared_resource.h  sketch_uploader.h  utils.h
include/FermatSketch/: fermat.h
include/FermatSketch/util/: mod.h
src/: local_agent.cc  main.cc  packet_handler.cc  params.cc  shared_resource.cc  sketch_uploader.cc
